tests/macros/select/validate_async.stderr
error: option `validate_async` does not exist for kind `select`
 --> $DIR/validate_async.rs:2:52
  |
2 |     let q = inquisition::questions![Select { async validate: todo!() }];
  |                                                    ^^^^^^^^
