tests/macros/select/validate_async.rs
fn main() {
    let q = inquisition::questions![Select { async validate: todo!() }];
}
